# vision-transformer

./: .gitignore  README.md  adhoc.ipynb  config.toml  dataset.py  main.py  model.py  pyproject.toml  run.py  train.py  vit.py
checkpoints/: best.pt  last.pt
config/: config.toml
data/: dataset.py
dataset/: get_dataset.py
debug/: book.ipynb
notebooks/: dataset_exploration.ipynb  image_ to_patches.ipynb  model_size.ipynb
vision_transformer/model/: __init__.py  vit.py
