[project]
name = "vit-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
]
